reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__nested_internally_tagged_enums_minimal-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Test": {
        "oneOf": [
          {
            "oneOf": [
              {
                "type": "object",
                "title": "A",
                "required": [
                  "a",
                  "type",
                  "version"
                ],
                "properties": {
                  "a": {
                    "$ref": "#/components/schemas/u8"
                  },
                  "type": {
                    "const": "A"
                  },
                  "version": {
                    "const": "v1"
                  }
                }
              }
            ]
          }
        ]
      },
      "reflectapi_demo.tests.serde.V1": {
        "oneOf": [
          {
            "type": "object",
            "title": "A",
            "required": [
              "a",
              "type"
            ],
            "properties": {
              "a": {
                "$ref": "#/components/schemas/u8"
              },
              "type": {
                "const": "A"
              }
            }
          }
        ]
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
