reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__newtype_variants_adjacently_tagged-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestNewtypeVariantsAdjacentlyTagged"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestNewtypeVariantsAdjacentlyTagged"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "bool": {
        "description": "Boolean value",
        "type": "boolean"
      },
      "i32": {
        "description": "32-bit signed integer",
        "type": "integer"
      },
      "reflectapi_demo.tests.serde.TestNewtypeVariantsAdjacentlyTagged": {
        "oneOf": [
          {
            "type": "object",
            "title": "int",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "$ref": "#/components/schemas/i32"
              },
              "t": {
                "const": "int"
              }
            }
          },
          {
            "type": "object",
            "title": "string",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "t": {
                "const": "string"
              }
            }
          },
          {
            "type": "object",
            "title": "bool",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "$ref": "#/components/schemas/bool"
              },
              "t": {
                "const": "bool"
              }
            }
          },
          {
            "type": "object",
            "title": "unit",
            "required": [
              "c",
              "t"
            ],
            "properties": {
              "c": {
                "type": "object",
                "title": "unit",
                "properties": {}
              },
              "t": {
                "const": "unit"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
